ci: use main branch as default for trigger

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build and Pack
 on:
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
