--- a/wss/Dockerfile
+++ b/wss/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:alpine
+FROM node:18-alpine
 
 COPY ./package.json .
+COPY ./package-lock.json .
 
 RUN npm install -g del-cli
 RUN npm install -g typescript
