fix: use same do main for socket

--- a/app/.env.production
+++ b/app/.env.production
@@ -1,2 +1,2 @@
-VITE_SOCKET_URL=wss://scoober-ws.infra.xtrasoftwork.com
-VITE_API_URL=https://scoober-api.infra.xtrasoftwork.com
+VITE_SOCKET_URL=wss://uyi-scoober.mooo.com
+VITE_API_URL=https://uyi-scoober-api.mooo.com
