--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^6.1.8"
   },
